--- a/contact bootstrap.html
+++ b/contact bootstrap.html
@@ -26,14 +26,14 @@
     </div>
   </header>
 
-  <div id="main-container" class="container">
+  <div id="main-container" class="container" class="col-12">
     <section class="main-section">
       <h1>Contact</h1>
 
       <form id="contact-form">
         <ul>
           <li>
-            <label for="name">Name</label>
+            <label for="name" class="form group">Name</label>
             <input type="text" id="name" name="name" placeholder="John Smith" required="required">
           </li>
           <li>
@@ -53,7 +53,7 @@
   </div>
 
   <footer>
-    <div class="container">
+    <div class="container-fluid">
       Copyright &copy; 
     </div>
   </footer>
